--- a/assets/css/baiviet.css
+++ b/assets/css/baiviet.css
@@ -1,6 +1,7 @@
 * {
     font-size: 16px;
 }
+
 .blog {
     display: flex;
     justify-content: center;
@@ -10,6 +11,7 @@
     border-bottom: 60px;
     background-attachment: fixed;
 }
+
 .blog-heading {
     size: 20px;
     display: flex;
@@ -17,23 +19,29 @@
     align-items: center;
     flex-direction: column;
 }
+
 .blog-heading p b {
     size: 40px;
 }
+
 .blog .row {
     margin-left: 40px;
     margin-right: 40px;
 }
+
 .col-md-4 img {
     margin-top: 20px;
 }
+
 .card-body p .text-warning {
     font-size: 15px;
 }
+
 .card-body p {
     margin-top: 5px;
     margin-bottom: 5px;
 }
+
 #myBtn {
     font-size: 13px;
     color: black;
@@ -47,28 +55,33 @@
 .read-more-btn:hover {
     opacity: 0.6;
 }
- main{
-     margin-bottom: 50px;
- }
-button {
-    width: 90px;
-    height: 30px;
-    background: none;
-    font-size: 13px;
-    font-weight: bold;
+
+main {
+    margin-bottom: 50px;
 }
+
 @-webkit-keyframes flash {
-    0% { opacity: .3; }
-    100% { opacity: 1; }
-   }
-   @keyframes flash {
-    0% { opacity: .3; }
-    100% { opacity: 1; }
-   }
-   .flash:hover {
+    0% {
+        opacity: .3;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes flash {
+    0% {
+        opacity: .3;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.flash:hover {
     opacity: 1;
     -webkit-animation: flash 1s;
     animation: flash 1s;
-   }
-
-   
+}
