--- a/assets/css/thanhtoan.css
+++ b/assets/css/thanhtoan.css
@@ -1,26 +1,36 @@
+.main {
+  font-size: 1.8rem;
+}
+
 .checkout {
   padding-bottom: 80px;
 }
+
 .checkout__description {
   margin-bottom: 20px;
   padding: 10px 0px;
   background: #f5f5f5;
 }
+
 .checkout__description a::after {
   content: "/";
   padding: 0 8px;
 }
+
 .checkout__description a {
   font-weight: 500;
   transition: all 0.2s;
   margin-left: 67px;
 }
+
 .checkout__description a:hover {
   color: #ba933e;
 }
+
 .checkout__description span {
   color: #999999;
 }
+
 .checkout__heading {
   font-weight: bold;
   margin-bottom: 30px;
@@ -29,6 +39,7 @@
 .checkout__info .checkout__info-left {
   padding-right: 50px;
 }
+
 .checkout__info-title {
   margin-bottom: 40px;
   font-weight: 500;
@@ -53,6 +64,7 @@
 .checkout__order-heading {
   font-weight: 700;
 }
+
 .checkout__order-content {
   margin-bottom: 30px;
   line-height: 35px;
@@ -61,10 +73,12 @@
 .checkout__order-content .input-group {
   position: relative;
 }
+
 .form-control:focus {
   border-color: #212529;
   box-shadow: none;
 }
+
 .checkout__order-content .input-group form-label {
   position: absolute;
   display: block;
@@ -74,9 +88,11 @@
 .checkout__order-content thead tr {
   border-bottom: 2px solid rgb(160, 150, 150);
 }
+
 .checkout__order-total {
   color: #ba933e;
 }
+
 .checkout__payment {
   margin: 30px 0;
 }
@@ -90,28 +106,36 @@
   transition: all 0.5s;
   font-weight: 700;
   margin: 20px 0;
+  border: none;
+
 }
+
 .checkout__button:hover {
-  background-color: #ba933e;
+  background-color: #F67A60;
   color: white;
 }
-.checkout__listtotal td:nth-child(1){
+
+.checkout__listtotal td:nth-child(1) {
   font-weight: 600;
   font-size: 16px;
 }
-.checkout__listtotal td:nth-child(2){
+
+.checkout__listtotal td:nth-child(2) {
   font-weight: 600;
   font-size: 16px;
 }
+
 .checkout__total td:nth-child(1) {
   font-weight: 700;
   font-size: 18px;
 }
+
 .checkout__total td:nth-child(2) {
   color: #ba933e;
   font-weight: 700;
   font-size: 18px;
 }
+
 /* RESPONSIVE */
 @media screen and (max-width: 991.98px) {
   .checkout__info-right {
@@ -123,4 +147,9 @@
   .checkout__order {
     width: 100%;
   }
+}
+
+.form-control {
+  padding: 12px;
+  font-size: 1.6rem;
 }
