--- a/assets/css/trangchu.css
+++ b/assets/css/trangchu.css
@@ -21,11 +21,19 @@
     align-items: center;
     padding: 1rem;
     width: 100%;
+    max-height: 110px;
     height: 110px;
+
     z-index: 9999999;
     background-color: var(--white-color);
     transition: all 0.25s linear;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.header-navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .header-top.is-fixed {
@@ -37,9 +45,10 @@
     animation: fade 0.25s forwards 1;
 }
 
-.header-top {
+/* .header-top {
     padding: 32px 12px;
-}
+} */
+
 
 .header-logo {
     width: 150px;
@@ -49,16 +58,19 @@
     text-decoration: none;
 }
 
-.header-logo img {
+.header-logo__img {
     width: 100%;
     height: 100%;
+    max-height: 100%;
     object-fit: contain;
 }
 
 .navbar-list {
     list-style: none;
-    padding-left: 0;
+    padding: 4px 0 0 0;
     display: flex;
+    align-items: center;
+    margin: 0;
     flex: 1;
 
 }
@@ -67,10 +79,10 @@
 
 .header-item__link {
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 1.6rem !important;
     color: var(--primary-color);
     padding: 0.5rem;
-    font-weight: 200;
+    /* font-weight: 200; */
     margin: 0 8px;
 
 }
@@ -88,7 +100,7 @@
     justify-content: center;
     align-items: center;
     font-size: 1.6rem;
-    font-weight: 300;
+    /* font-weight: bold; */
 }
 
 .seperate {
@@ -179,12 +191,13 @@
     text-align: center;
 }
 
-.navbar-item:hover .header-item__link{
+.navbar-item:hover .header-item__link {
     color: #fff;
     background-color: var(--primary-color);
     border-radius: 8px;
     transition: all .3s;
 }
+
 .header-heart:hover,
 .header-cart:hover,
 .header-search:hover,
@@ -619,6 +632,11 @@
     display: flex;
     align-items: center;
     gap: 0 4px;
+    color: #000;
+}
+
+.priceCon span:nth-child(1) {
+    font-size: 1.6rem;
 }
 
 /* modal */
@@ -794,6 +812,7 @@
     margin-bottom: 20px;
     border-radius: 8px;
 }
+
 .user {
     color: var(--primary-color);
     text-decoration: underline;
